refactor: make Collections unmodifiable to prevent from unexpected changes in data